Sort fridges by distance to a location
